fix staff/nominations overflowing out of page with too many categories

--- a/MCA-AYIM/assets/sass/staff.scss
+++ b/MCA-AYIM/assets/sass/staff.scss
@@ -52,3 +52,7 @@
         flex-direction: column;
     }
 }
+
+.staff-searchContainer {
+    height: 90%;
+}
